@@ -1136,43 +1136,6 @@ void bx_init_options()
       "Skips check for the 0xaa55 signature on floppy boot device.",
       0);
 
-#if BX_LOAD32BITOSHACK
-  // loader hack
-  bx_list_c *load32bitos = new bx_list_c(boot_params, "load32bitos", "32-bit OS Loader Hack");
-
-  static const char *loader_os_names[] = { "none", "linux", "nullkernel", NULL };
-
-  bx_param_enum_c *whichOS = new bx_param_enum_c(load32bitos,
-      "which",
-      "Which operating system?",
-      "Which OS to boot",
-      loader_os_names,
-      Load32bitOSNone,
-      Load32bitOSNone);
-  path = new bx_param_filename_c(load32bitos,
-      "path",
-      "Pathname of OS to load",
-      "Pathname of the 32-bit OS to load",
-      "", BX_PATHNAME_LEN);
-  bx_param_filename_c *iolog = new bx_param_filename_c(load32bitos,
-      "iolog",
-      "Pathname of I/O log file",
-      "I/O logfile used for initializing the hardware",
-      "", BX_PATHNAME_LEN);
-  bx_param_filename_c *initrd = new bx_param_filename_c(load32bitos,
-      "initrd",
-      "Pathname of initrd",
-      "Pathname of the initial ramdisk",
-      "", BX_PATHNAME_LEN);
-  whichOS->set_ask_format("Enter OS to load: [%s] ");
-  path->set_ask_format("Enter pathname of OS: [%s]");
-  iolog->set_ask_format("Enter pathname of I/O log: [%s] ");
-  initrd->set_ask_format("Enter pathname of initrd: [%s] ");
-  load32bitos->set_options(menu->SERIES_ASK);
-  whichOS->set_dependent_list(load32bitos->clone(), 1);
-  whichOS->set_dependent_bitmap(Load32bitOSNone, 0);
-  whichOS->set(Load32bitOSNone);
-#endif
   boot_params->set_options(menu->SHOW_PARENT);
 
   // floppy subtree
@@ -3032,40 +2995,7 @@ static int parse_line_formatted(const char *context, int num_params, char *param
       PARSE_ERR(("%s: port_e9_hack directive malformed.", context));
     }
   } else if (!strcmp(params[0], "load32bitOSImage")) {
-#if BX_LOAD32BITOSHACK
-    if ((num_params!=4) && (num_params!=5)) {
-      PARSE_ERR(("%s: load32bitOSImage directive: wrong # args.", context));
-    }
-    if (strncmp(params[1], "os=", 3)) {
-      PARSE_ERR(("%s: load32bitOSImage: directive malformed.", context));
-    }
-    if (!strcmp(&params[1][3], "nullkernel")) {
-      SIM->get_param_enum(BXPN_LOAD32BITOS_WHICH)->set(Load32bitOSNullKernel);
-    }
-    else if (!strcmp(&params[1][3], "linux")) {
-      SIM->get_param_enum(BXPN_LOAD32BITOS_WHICH)->set(Load32bitOSLinux);
-    }
-    else {
-      PARSE_ERR(("%s: load32bitOSImage: unsupported OS.", context));
-    }
-    if (strncmp(params[2], "path=", 5)) {
-      PARSE_ERR(("%s: load32bitOSImage: directive malformed.", context));
-    }
-    if (strncmp(params[3], "iolog=", 6)) {
-      PARSE_ERR(("%s: load32bitOSImage: directive malformed.", context));
-    }
-    SIM->get_param_string(BXPN_LOAD32BITOS_PATH)->set(&params[2][5]);
-    SIM->get_param_string(BXPN_LOAD32BITOS_IOLOG)->set(&params[3][6]);
-    if (num_params == 5) {
-      if (strncmp(params[4], "initrd=", 7)) {
-        PARSE_ERR(("%s: load32bitOSImage: directive malformed.", context));
-      }
-      SIM->get_param_string(BXPN_LOAD32BITOS_INITRD)->set(&params[4][7]);
-    }
-    PARSE_WARN(("%s: WARNING: This Bochs feature is not maintained yet", context));
-#else
-    PARSE_ERR(("%s: load32bitOSImage: BX_LOAD32BITOSHACK must be set to 1.", context));
-#endif
+    PARSE_ERR(("%s: load32bitOSImage: This legacy feature is no longer supported.", context));
   } else if (!strcmp(params[0], "user_plugin")) {
 #if BX_PLUGINS
     char tmpname[80];
@@ -3222,22 +3152,6 @@ int bx_write_usb_options(FILE *fp, int maxports, bx_list_c *base)
   fprintf(fp, "\n");
   return 0;
 }
-
-#if BX_LOAD32BITOSHACK
-int bx_write_loader_options(FILE *fp)
-{
-  if (SIM->get_param_enum(BXPN_LOAD32BITOS_WHICH)->get() == Load32bitOSNone) {
-    fprintf(fp, "# no loader\n");
-    return 0;
-  }
-  fprintf (fp, "load32bitOSImage: os=%s, path=%s, iolog=%s, initrd=%s\n",
-      SIM->get_param_enum(BXPN_LOAD32BITOS_WHICH)->get_selected(),
-      SIM->get_param_string(BXPN_LOAD32BITOS_PATH)->getptr(),
-      SIM->get_param_string(BXPN_LOAD32BITOS_IOLOG)->getptr(),
-      SIM->get_param_string(BXPN_LOAD32BITOS_INITRD)->getptr());
-  return 0;
-}
-#endif
 
 int bx_write_clock_cmos_options(FILE *fp)
 {
@@ -3464,9 +3378,6 @@ int bx_write_configuration(const char *rc, int overwrite)
   fprintf(fp, "screenmode: name=\"%s\"\n", SIM->get_param_string(BXPN_SCREENMODE)->getptr());
 #endif
   bx_write_clock_cmos_options(fp);
-#if BX_LOAD32BITOSHACK
-  bx_write_loader_options(fp);
-#endif
   bx_write_log_options(fp, (bx_list_c*) SIM->get_param("log"));
   bx_write_param_list(fp, (bx_list_c*) SIM->get_param(BXPN_KEYBOARD), NULL, 0);
   bx_write_param_list(fp, (bx_list_c*) SIM->get_param(BXPN_MOUSE), NULL, 0);
